# gesture-hud

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: record.py  run.py
src/: config.py
src/audio/: __init__.py  player.py
src/core/: engine.py  renderer.py
src/effects/: __init__.py  glow.py  holographic.py  scanlines.py  screen.py
src/gestures/: recognizer.py  tracker.py
src/hud/: menu.py  object_tags.py  radar.py  stats.py  targeting.py  widgets.py
src/particles/: __init__.py  emitters.py  engine.py
src/spells/: __init__.py  base.py  fireball.py  force_push.py  lightning.py  registry.py  shield.py  teleport.py  wind.py
src/vision/: camera.py  detector.py  hands.py
tests/: conftest.py  test_audio.py  test_camera.py  test_config.py  test_detector.py  test_effects.py  test_engine.py  test_glow.py  test_hands.py  test_object_tags.py  test_particles.py  test_radar.py  test_recognizer.py  test_renderer.py  test_screen_effects.py  test_spells.py  test_stats.py  test_targeting.py  test_tracker.py  test_widgets.py
